first chenge for check github

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    Ismail Hossen Swapon
+    We have to learn this file.
     <script src="js/main.js"></script>
   </body>
 </html>
