--- a/index.html
+++ b/index.html
@@ -14,7 +14,124 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    We have to learn this file.
+    <header>
+      <div class="wrapper">
+        <nav>
+          <div class="logo">GD.</div>
+
+          <ul>
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">Services</a>
+            </li>
+            <li>
+              <a href="#">Our Work</a>
+            </li>
+            <li>
+              <a href="#" class="btn dark">Enrol Now</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- Eng of Desktop navigation Menu  -->
+
+        <div class="hero-section">
+          <div class="left">
+            <h1>
+              Lern the art of <br />
+              Game Dev
+            </h1>
+            <p>
+              This is a comprehensive course on Game Development. You will learn
+              everything from generating an idea to publishing your games to
+              different platforms.
+            </p>
+            <a href="#" class="btn light"> Enrol Now</a>
+          </div>
+          <div class="right">
+            <img src="img/hero-image.png" alt="" />
+          </div>
+          <div class="acheivement-cards">
+            <div class="acheivement-card Students-Enrolled">
+              <div class="content">
+                <div><h3>42k</h3></div>
+                <p>Students Enrolled</p>
+              </div>
+              <div class="bg"></div>
+            </div>
+            <div class="acheivement-card Overall-Rating">
+              <div class="content">
+                <div>
+                  <h3>42k</h3>
+                  <img src="img/Overratin-Start-icon.svg" alt="" />
+                </div>
+                <p>Overall Rating</p>
+              </div>
+              <div class="bg"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- End of the header section -->
+
+    <div class="wrapper">
+      <section class="testimonials-section">
+        <div class="left">
+          <div class="testimonial-card">
+            <div class="content">
+              This is a great course. It helped me a lot. Thank you :)
+
+              <div class="info">
+                <h4>Jane Cooper</h4>
+                <p class="company-name">Developer, Sony</p>
+              </div>
+
+              <img src="img/Jane-Cooper.png" alt="" />
+            </div>
+          </div>
+
+          <div class="testimonial-card">
+            <div class="content">
+              Amazing Work! Well done!
+
+              <div class="info">
+                <h4>Jacob Jones</h4>
+                <p class="company-name">Designer, Facebook</p>
+              </div>
+
+              <img src="img/Jacob-Jones.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="right">
+          <h2>What our students say</h2>
+          <p>
+            All students get access to all the videos and also the source code
+            of the projects.
+          </p>
+          <p>
+            You will also have access to a private Discord channel where you can
+            discuss your doubts.
+          </p>
+          <a href="#" class="btn light">Learn More</a>
+        </div>
+      </section>
+    </div>
+    <!-- End of the testimonials section -->
+
+    <section class="courses-section">
+      <div class="wrapper">
+        <h2 class="light">Our Courses</h2>
+
+        <div class="course-cards">
+          <div class="course-card">
+            <img src="img/Rectangle 7.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="js/main.js"></script>
   </body>
 </html>
