desktop html code complite

--- a/index.html
+++ b/index.html
@@ -128,10 +128,109 @@
         <div class="course-cards">
           <div class="course-card">
             <img src="img/Rectangle 7.png" alt="" />
+            <div class="info">
+              <h3>Game Design Essentials</h3>
+              <div class="duration">
+                <img src="img/Duration.svg" alt="" /> 8 Hrs
+              </div>
+            </div>
+          </div>
+          <div class="course-card">
+            <img src="img/Rectangle 8.png" alt="" />
+            <div class="info">
+              <h3>Unity Game Engine Fundamentals</h3>
+              <div class="duration">
+                <img src="img/Duration.svg" alt="" /> 8 Hrs
+              </div>
+            </div>
           </div>
         </div>
+        <a href="#" class="btn light">All Courses</a>
       </div>
     </section>
+
+    <!-- eng of courses Section  -->
+
+    <div class="wrapper">
+      <section class="app-section">
+        <h2>Get Our App</h2>
+        <p>You can use our App for better experience on smartphones</p>
+
+        <div class="app-buttons">
+          <div class="app-btn">
+            <img src="img/AppStore.svg" alt="" />
+            <span>App Store</span>
+          </div>
+
+          <div class="app-btn">
+            <img src="img/PlayStore.svg" alt="" />
+            <span>Google Play</span>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!-- End of the app Section  -->
+
+    <footer>
+      <div class="wrapper">
+        <div class="links-container">
+          <div class="links">
+            <h3>Quick Links</h3>
+
+            <ul>
+              <li>
+                <a href="#">About Us</a>
+              </li>
+              <li>
+                <a href="#">Contact Us</a>
+              </li>
+              <li>
+                <a href="#">Privacy Policy</a>
+              </li>
+              <li>
+                <a href="#">Terms & Conditions</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="links">
+            <h3>Course</h3>
+
+            <ul>
+              <li>
+                <a href="#">Log In</a>
+              </li>
+              <li>
+                <a href="#">Download</a>
+              </li>
+              <li>
+                <a href="#">All Courses</a>
+              </li>
+            </ul>
+          </div>
+          <div class="links">
+            <h3>Contact Us</h3>
+
+            <ul>
+              <li>contact@email.com</li>
+            </ul>
+
+            <div class="social">
+              <a href="#"><img src="img/facebook-icon.svg" alt="" /></a>
+              <a href="#"><img src="img/Instragram-icon.svg" alt="" /></a>
+            </div>
+
+            <form action="#">
+              <input type="text" placeholder="Email Address" />
+              <button class="submit-btn">SubsCribe</button>
+            </form>
+          </div>
+        </div>
+
+        <p class="copyright">This website is developed by GTCoding © 2021</p>
+      </div>
+    </footer>
     <script src="js/main.js"></script>
   </body>
 </html>
