--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a href="#">Our Work</a>
             </li>
             <li>
-              <a href="#" class="btn dark">Enrol Now</a>
+              <a href="#" class="btn dark enrol-icon">Enrol Now</a>
             </li>
           </ul>
         </nav>
